fix: secure admin, wire lead API, SEO + vercel routing

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FATTAKHOV HR Agency | HR + AI Consulting</title>
+    <meta name="description" content="HR + AI consulting: аудит команды, автоматизация процессов и повышение эффективности бизнеса." />
+    <meta name="robots" content="index,follow" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="FATTAKHOV HR Agency | HR + AI Consulting" />
+    <meta property="og:description" content="Аудит команды и AI-автоматизация бизнес-процессов." />
+    <meta property="og:image" content="https://fattakhovhragency.vercel.app/og-cover.jpg" />
+    <meta property="og:locale" content="ru_RU" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <link rel="canonical" href="https://fattakhovhragency.vercel.app/" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
